--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.3",
-    "googleapis": "^33.0.0"
+    "googleapis": "^33.0.0",
+    "ramda": "^0.25.0"
   }
 }
