--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-FBI OPEN UP!!!
+CLIENT_ID=304825942443-inmmg9cud04tv1uie1k5avdcqss7h53o.apps.googleusercontent.com
+CLIENT_SECRET=1zMRJ1cgLXJUx4JtT1PCAArZ
+REDIRECT_URL=http://localhost:3000/callback
+MONGODB_URI=mongodb://127.0.0.1:27017/roshibot
+REMOTE_URL=http://192.168.0.17:3000
