--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^6.1.0",
     "express": "^4.16.3",
     "googleapis": "^33.0.0",
+    "mongodb": "^3.1.8",
     "ramda": "^0.25.0",
     "request": "^2.88.0",
     "request-promise": "^4.2.2"
