Listening on port from env

--- a/.env
+++ b/.env
@@ -2,4 +2,6 @@ CLIENT_ID=304825942443-inmmg9cud04tv1uie1k5avdcqss7h53o.apps.googleusercontent.c
 CLIENT_SECRET=1zMRJ1cgLXJUx4JtT1PCAArZ
 REDIRECT_URL=http://localhost:3000/callback
 MONGODB_URI=mongodb://127.0.0.1:27017/roshibot
+DATABASE=roshibot
 REMOTE_URL=http://192.168.0.17:3000
+PORT=3000
